# sloam

./: .gitignore  LICENSE.txt  README.md
doc/: local_installation.md
docker/: BaseDockerfile  SLOAMDockerfile  build_sloam_image.sh  fix_cmake_warnings.patch  portfile.cmake  run_sloam_container.sh
sloam/: CMakeLists.txt  nodelet_plugins.xml  package.xml
sloam/cmake/: CMakeHelpers.cmake
sloam/include/core/: mapManager.h  sloam.h  sloamNode.h  sloamNodelet.h
sloam/include/helpers/: definitions.h  serialization.h  utils.h
sloam/include/objects/: cylinder.h  plane.h  semanticObject.h
sloam/include/segmentation/: inference.h  trellis.h
sloam/include/viz/: vizTools.h
sloam/launch/: run.launch  run_sim.launch  segmentation.launch  sloam.launch
sloam/launch/rviz/: segmentation.rviz  sloam.rviz
sloam/params/: ouster.yaml  sim.yaml  sloam.yaml
sloam/src/core/: inputNode.cpp  mapManager.cpp  sloam.cpp  sloamNode.cpp  sloamNodelet.cpp
sloam/src/objects/: cylinder.cpp  plane.cpp
sloam/src/segmentation/: inference.cpp  inferenceNode.cpp  test_inference.cpp  trellis.cpp
sloam/src/tests/: core_test.cpp  cylinder_test.cpp  plane_test.cpp  run_all_test.cpp
sloam/src/tests/aux/: moving_ground_t0.pcd  moving_ground_t1.pcd  moving_landmarks_t0  moving_landmarks_t1  moving_tree_t0.pcd  moving_tree_t1.pcd  poses.txt  still_ground_t0.pcd  still_ground_t1.pcd  still_landmarks_t0  still_landmarks_t1  still_tree_t0.pcd  still_tree_t1.pcd
sloam/src/viz/: vizTools.cpp
sloam_msgs/: CMakeLists.txt  package.xml
sloam_msgs/msg/: LoopClosure.msg  ObservationPair.msg  ROSCylinder.msg  ROSGround.msg  ROSObservation.msg  ROSScan.msg  ROSSubMap.msg  ROSSweep.msg
