<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sloam_msgs</name>
  <version>0.0.1</version>
  <description>
    Defines the messages that are used to communicate with the
    sloam package.
  </description>

  <license>TODO</license>
  <maintainer email="guinardari@usp.br">Guilherme</maintainer>
  <author email="guinardari@usp.br">Guilherme Nardari</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>